{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 52,
  "lineage": "64b2a099-9f08-d6d3-8e79-b1361b515bd7",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766936300107:loadbalancer/app/wordpress-dev-elb/b063ca8ebaa64875",
            "arn_suffix": "app/wordpress-dev-elb/b063ca8ebaa64875",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-dev-elb-1005143212.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:766936300107:loadbalancer/app/wordpress-dev-elb/b063ca8ebaa64875",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-dev-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b117a365e5c787a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03aa64af8e0b6af57"
              },
              {
                "subnet_id": "subnet-0a45dca8b2bdbe720"
              }
            ],
            "subnets": [
              "subnet-03aa64af8e0b6af57",
              "subnet-0a45dca8b2bdbe720"
            ],
            "tags": {
              "Name": "wordpress-dev-elb",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-elb",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.http_sg.aws_security_group.this",
            "module.http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766936300107:listener/app/wordpress-dev-elb/b063ca8ebaa64875/67246f414785bc6f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:766936300107:listener/app/wordpress-dev-elb/b063ca8ebaa64875/67246f414785bc6f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:766936300107:loadbalancer/app/wordpress-dev-elb/b063ca8ebaa64875",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.http_sg.aws_security_group.this",
            "module.http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:766936300107:targetgroup/h120231128041852284300000006/4d1e38c1a26572f4",
            "arn_suffix": "targetgroup/h120231128041852284300000006/4d1e38c1a26572f4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 120,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:766936300107:targetgroup/h120231128041852284300000006/4d1e38c1a26572f4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "h120231128041852284300000006",
            "name_prefix": "h1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "h1",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "h1",
              "app": "wordpress",
              "environment": "dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.db_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:security-group/sg-0d5954bebfbc4eb41",
            "description": "MySQL Security Group",
            "egress": [],
            "id": "sg-0d5954bebfbc4eb41",
            "ingress": [],
            "name": "wordpress-dev-db-sg-20231128041852274700000005",
            "name_prefix": "wordpress-dev-db-sg-",
            "owner_id": "766936300107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-dev-db-sg",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-db-sg",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "MySQL access from within VPC",
            "from_port": 3306,
            "id": "sgrule-3347152311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d5954bebfbc4eb41",
            "security_group_rule_id": "sgr-01a909b2433e8f7ad",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db_sg.aws_security_group.this",
            "module.db_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.efs_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.efs_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:security-group/sg-05022fa1aa0584288",
            "description": "EFS Security Group",
            "egress": [],
            "id": "sg-05022fa1aa0584288",
            "ingress": [],
            "name": "wordpress-dev-efs-sg-20231128041852271700000004",
            "name_prefix": "wordpress-dev-efs-sg-",
            "owner_id": "766936300107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-dev-efs-sg",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-efs-sg",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1331300022",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05022fa1aa0584288",
            "security_group_rule_id": "sgr-07eb2c82c97c43430",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs_sg.aws_security_group.this",
            "module.efs_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:security-group/sg-0b117a365e5c787a9",
            "description": "Frontend Security Group",
            "egress": [],
            "id": "sg-0b117a365e5c787a9",
            "ingress": [],
            "name": "wordpress-dev-http-sg-20231128041852236000000002",
            "name_prefix": "wordpress-dev-http-sg-",
            "owner_id": "766936300107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-dev-http-sg",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-http-sg",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Access from within VPC",
            "from_port": 0,
            "id": "sgrule-3621430321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b117a365e5c787a9",
            "security_group_rule_id": "sgr-05e3712ff1d3f6d49",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_sg.aws_security_group.this",
            "module.http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "dev-https to ELB",
            "from_port": 443,
            "id": "sgrule-1146259264",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b117a365e5c787a9",
            "security_group_rule_id": "sgr-089aa4d3ae7e68707",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_sg.aws_security_group.this",
            "module.http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "dev-http to ELB",
            "from_port": 80,
            "id": "sgrule-2475052915",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b117a365e5c787a9",
            "security_group_rule_id": "sgr-0942f6e2e293218f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_sg.aws_security_group.this",
            "module.http_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:security-group/sg-0d191952a1fb80e36",
            "description": "SSH Security Group",
            "egress": [],
            "id": "sg-0d191952a1fb80e36",
            "ingress": [],
            "name": "wordpress-dev-ssh-sg-20231128041852248400000003",
            "name_prefix": "wordpress-dev-ssh-sg-",
            "owner_id": "766936300107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-dev-ssh-sg",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-ssh-sg",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3967444342",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d191952a1fb80e36",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssh_sg.aws_security_group.this",
            "module.ssh_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access from anywhere",
            "from_port": 22,
            "id": "sgrule-848412948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d191952a1fb80e36",
            "security_group_rule_id": "sgr-027b7851c2414b2da",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssh_sg.aws_security_group.this",
            "module.ssh_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Acess from within VPC",
            "from_port": 0,
            "id": "sgrule-1312236842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d191952a1fb80e36",
            "security_group_rule_id": "sgr-08d06144c8b8bbd34",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssh_sg.aws_security_group.this",
            "module.ssh_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:internet-gateway/igw-06104b85854e2499b",
            "id": "igw-06104b85854e2499b",
            "owner_id": "766936300107",
            "tags": {
              "Name": "wordpress-dev-vpc",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc",
              "app": "wordpress",
              "environment": "dev"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06104b85854e2499b",
            "id": "r-rtb-07018f1d5697e67df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07018f1d5697e67df",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:route-table/rtb-06657ff78e181ce40",
            "id": "rtb-06657ff78e181ce40",
            "owner_id": "766936300107",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress-dev-vpc-private-us-east-1a",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-private-us-east-1a",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:route-table/rtb-0a1d496489e3f7c29",
            "id": "rtb-0a1d496489e3f7c29",
            "owner_id": "766936300107",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress-dev-vpc-private-us-east-1b",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-private-us-east-1b",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:route-table/rtb-06e1ded5f21a8830d",
            "id": "rtb-06e1ded5f21a8830d",
            "owner_id": "766936300107",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress-dev-vpc-private-us-east-1c",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-private-us-east-1c",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:route-table/rtb-07018f1d5697e67df",
            "id": "rtb-07018f1d5697e67df",
            "owner_id": "766936300107",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress-dev-vpc-public",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-public",
              "app": "wordpress",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0915d8e8a0bdf717c",
            "route_table_id": "rtb-06657ff78e181ce40",
            "subnet_id": "subnet-053665db7ef9f4e39"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082b119e059b8778c",
            "route_table_id": "rtb-0a1d496489e3f7c29",
            "subnet_id": "subnet-042d4d6d9243a61c0"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0854ce8ede3a9e2a8",
            "route_table_id": "rtb-06e1ded5f21a8830d",
            "subnet_id": "subnet-0e32d2c9bd8691aac"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d544b7354d028500",
            "route_table_id": "rtb-06657ff78e181ce40",
            "subnet_id": "subnet-068cc92c95392a1d5"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a359b555fd48bd1f",
            "route_table_id": "rtb-0a1d496489e3f7c29",
            "subnet_id": "subnet-0bd59509c92dfed76"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0669c97425ec361ac",
            "route_table_id": "rtb-07018f1d5697e67df",
            "subnet_id": "subnet-0a45dca8b2bdbe720"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a7e3c3317bf93ca",
            "route_table_id": "rtb-07018f1d5697e67df",
            "subnet_id": "subnet-03aa64af8e0b6af57"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:subnet/subnet-053665db7ef9f4e39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053665db7ef9f4e39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766936300107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-dev-vpc-db-us-east-1a",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-db-us-east-1a",
              "app": "wordpress",
              "environment": "dev"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:subnet/subnet-042d4d6d9243a61c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042d4d6d9243a61c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766936300107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-dev-vpc-db-us-east-1b",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-db-us-east-1b",
              "app": "wordpress",
              "environment": "dev"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:subnet/subnet-0e32d2c9bd8691aac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e32d2c9bd8691aac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766936300107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-dev-vpc-db-us-east-1c",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-db-us-east-1c",
              "app": "wordpress",
              "environment": "dev"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:subnet/subnet-068cc92c95392a1d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068cc92c95392a1d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766936300107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-dev-vpc-private-us-east-1a",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-private-us-east-1a",
              "app": "wordpress",
              "environment": "dev"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:subnet/subnet-0bd59509c92dfed76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd59509c92dfed76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766936300107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-dev-vpc-private-us-east-1b",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-private-us-east-1b",
              "app": "wordpress",
              "environment": "dev"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:subnet/subnet-0a45dca8b2bdbe720",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a45dca8b2bdbe720",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766936300107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-dev-vpc-public-us-east-1a",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-public-us-east-1a",
              "app": "wordpress",
              "environment": "dev"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:subnet/subnet-03aa64af8e0b6af57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa64af8e0b6af57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766936300107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-dev-vpc-public-us-east-1b",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc-public-us-east-1b",
              "app": "wordpress",
              "environment": "dev"
            },
            "vpc_id": "vpc-02633411bc1ffbdd1"
          },
          "dependencies": [
            "data.aws_availability_zones.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766936300107:vpc/vpc-02633411bc1ffbdd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fe467c8d916c913",
            "default_route_table_id": "rtb-003c9d794d74cc742",
            "default_security_group_id": "sg-0c36b1916972171c8",
            "dhcp_options_id": "dopt-08971424b6bceb0ad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02633411bc1ffbdd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003c9d794d74cc742",
            "owner_id": "766936300107",
            "tags": {
              "Name": "wordpress-dev-vpc",
              "app": "wordpress",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "wordpress-dev-vpc",
              "app": "wordpress",
              "environment": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}